<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themgv"
        style="@style/Label"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/edtThemMaGV"
        android:layout_width="match_parent"
        style="@style/edittext"
        android:hint="Mã giảng viên" />

    <EditText
        android:id="@+id/edtThemUsernameGV"
        android:layout_width="match_parent"
        style="@style/edittext"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edtThemPasswordGV"
        android:layout_width="match_parent"
        style="@style/edittext"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edtThemTenGV"
        android:layout_width="match_parent"
        style="@style/edittext"
        android:hint="Tên giảng viên"/>

    <EditText
        android:id="@+id/edtThemChuyenNganhGV"
        android:layout_width="match_parent"
        style="@style/edittext"
        android:hint="Chuyên ngành"/>
    <EditText
        android:id="@+id/edtThemNgaySinhGV"
        android:layout_width="match_parent"
        style="@style/edittext"
        android:hint="@string/ngay_sinh"/>
    <EditText
        android:id="@+id/edtThemGioiTinhGV"
        android:layout_width="match_parent"
        style="@style/edittext"
        android:hint="@string/gender"/>
    <EditText
        android:id="@+id/edtThemSDTGV"
        android:layout_width="match_parent"
        style="@style/edittext"
        android:inputType="number"
        android:hint="@string/phone_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnThemGV"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="Thêm"
            android:layout_marginEnd="8dp"
            style="@style/button" />
        <Button
            android:id="@+id/btnHuyThemGV"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/huy"
            style="@style/button"/>
    </LinearLayout>
</LinearLayout>