<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivAvatarGV"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvTenGV"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/ivAvatarGV"
        android:text="@string/gv" />

    <TextView
        android:id="@+id/tvNgaySinhGV"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTenGV"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/ivAvatarGV"
        android:text="@string/ngay_sinh" />

    <TextView
        android:id="@+id/tvChuyenNganhGV"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNgaySinhGV"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/ivAvatarGV"
        android:text="Chuyên ngành" />

    <TextView
        android:id="@+id/tvSDTGV"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChuyenNganhGV"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/ivAvatarGV"
        android:text="@string/phone_number" />
</RelativeLayout>