<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    style="@style/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/Label"/>
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstLine"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_rectangle"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTenApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#1BA1E2"
            android:textStyle="bold"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvGioiThieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTenApp"
            android:layout_marginBottom="50dp"
            android:text="@string/gioithieu"
            android:textAlignment="center"
            android:textColor="#00A0ED"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1"
        android:background="@drawable/round_rectangle"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnQuanTri"
            style="@style/textView"
            android:background="#00ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantri" />

        <Button
            android:id="@+id/btnGiangVien"
            style="@style/textView"
            android:background="#00ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnQuanTri"
            android:text="@string/gv" />

        <Button
            android:id="@+id/btnSinhVien"
            style="@style/textView"
            android:background="#00ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnGiangVien"
            android:text="@string/sv" />
    </RelativeLayout>

    <TextView
        android:id="@+id/firstLine2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"
        android:background="#f1f1f1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/relativeLayout2"
        android:layout_marginTop="8dp"
        android:layout_above="@id/firstLine2"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:src="@drawable/slideshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/firstLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/text"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"
        android:background="#f1f1f1" />

</RelativeLayout>